Верстка кода HTML
Текст индексной страницы вбит

--- a/index.html
+++ b/index.html
@@ -5,8 +5,94 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header>
+      <div>
+        <nav>
+          <ul>
+            <li><a href="#">ИНФОРМАЦИЯ</a></li>
+            <li><a href="#">ФОТО И ВИДЕО</a></li>
+            <li><a href="#">КАРТА ШТАТА</a></li>
+            <li><a href="#">ГОСТИНИЦЫ</a></li>
+          </ul>
+        </nav>
+    </div>
+    <div class="top-image">
+        <img src="#">
+    </div>
+    <div class="front-image">
+        <img src="#">
+    </div>
+    </header>
+    <main>
+      <div>
+        <h1>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
+        <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</p>
+      </div>
+      <div>
+        <h2>НАСТОЯЩИЙ ГОРОДОК</h2>
+        <p>-№1-</p>
+        <p>СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+      </div>
+      <div class="first-image">
+        <img src="#">
+      </div>
+      <div class="House">
+        <img src="#">
+        <h3>Жилье</h3>
+        <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЕ КАК В КИНО!</p>
+      </div>
+      <div class="Food">
+        <img src="#">
+        <h3>ЕДА</h3>
+        <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ БУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</p>
+      </div>
+      <div class="Souvenir">
+        <img src="#">
+        <h3>СУВЕНИРЫ</h3>
+        <p>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</p>
+      </div>
+      <div class="second-image">
+        <img src="#">
+      </div>
+      <div>
+        <h2>ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h2>
+        <p>-№2-</p>
+        <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ ВЫ ОСМЕЛИТЕСЬ</p>
+      </div>
+      <div class="Area">
+        <img src="#">
+        <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+        <p>-№3-</p>
+        <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
+      </div>
+      <div class="Route">
+        <img src="#">
+        <h3>КРАСИВАЯ ДОРОГА</h3>
+        <p>-№4-</p>
+        <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
+      </div>
+      <div class="Tourist">
+        <img src="#">
+        <h3>МАЛО ТУРИСТОВ</h3>
+        <p>-№5-</p>
+        <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</p>
+      </div>
+      <div>
+        <h2>ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+        <p>УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</P>
+      </div>
+      <div>
+        <h3>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</h3>
+      </div>
+    </main>
+    <footer>
+      <p>#VISITSEDONA</p>
+      <a href="#">Twitter</a>
+      <a href="#">Facebook</a>
+      <a href="#">Youtube</a>
+      <a href="#">WEBSITE BY</a>
+      <img src="#">
+      <a href="#">html academy</a>
+    </footer>
   </body>
 </html>
