Задал классы поправил футер

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
-        <nav>
-          <ul>
+        <nav class="header-menu">
+          <ul class="menu-list">
             <li><a href="#">ИНФОРМАЦИЯ</a></li>
             <li><a href="#">ФОТО И ВИДЕО</a></li>
             <li><a href="#">КАРТА ШТАТА</a></li>
             <li><a href="#">ГОСТИНИЦЫ</a></li>
           </ul>
         </nav>
-    </div>
+    </div>-
     <div class="top-image">
         <img src="#">
     </div>
@@ -23,76 +23,82 @@
         <img src="#">
     </div>
     </header>
-    <main>
-      <div>
+    <main class="main">
+      <div class="main-text">
         <h1>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
         <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</p>
       </div>
-      <div>
+      <section class="main-realhouse">
         <h2>НАСТОЯЩИЙ ГОРОДОК</h2>
         <p>-№1-</p>
         <p>СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
-      </div>
-      <div class="first-image">
+      </section>
+      <picture class="main-firstimage">
         <img src="#">
-      </div>
-      <div class="House">
-        <img src="#">
-        <h3>Жилье</h3>
-        <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЕ КАК В КИНО!</p>
-      </div>
-      <div class="Food">
+      </picture>
+      <section class="main-food">
         <img src="#">
         <h3>ЕДА</h3>
         <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ БУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</p>
-      </div>
-      <div class="Souvenir">
+      </section>
+      <section class="main-souvenir">
         <img src="#">
         <h3>СУВЕНИРЫ</h3>
         <p>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</p>
-      </div>
-      <div class="second-image">
+      </section>
+      <section class="main-house">
         <img src="#">
-      </div>
-      <div>
+        <h3>Жилье</h3>
+        <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЕ КАК В КИНО!</p>
+      </section>
+      <picture class="main-secondimage">
+        <img src="#">
+      </picture>
+      <section>
         <h2>ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h2>
         <p>-№2-</p>
         <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ ВЫ ОСМЕЛИТЕСЬ</p>
-      </div>
-      <div class="Area">
+      </section>
+      <section class="main-area">
         <img src="#">
         <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
         <p>-№3-</p>
         <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
-      </div>
-      <div class="Route">
+      </section>
+      <section class="main-route">
         <img src="#">
         <h3>КРАСИВАЯ ДОРОГА</h3>
         <p>-№4-</p>
         <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
-      </div>
-      <div class="Tourist">
+      </section>
+      <section class="main-tourist">
         <img src="#">
         <h3>МАЛО ТУРИСТОВ</h3>
         <p>-№5-</p>
         <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</p>
-      </div>
-      <div>
+      </section>
+      <section>
         <h2>ЗАИНТЕРЕСОВАЛИСЬ?</h2>
         <p>УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</P>
-      </div>
+      </section>
       <div>
         <h3>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</h3>
       </div>
     </main>
-    <footer>
-      <p>#VISITSEDONA</p>
-      <a href="#">Twitter</a>
-      <a href="#">Facebook</a>
-      <a href="#">Youtube</a>
-      <a href="#">WEBSITE BY</a>
-      <img src="#">
-      <a href="#">html academy</a>
+    <footer class="footer">
+      <div class="footer-tags">
+        <p>#VISITSEDONA</p>
+      </div>
+      <div class="footer-social">
+        <ul class="social-list">
+          <li class="social-twitter"><a href="#"><img src="Twitter"></a></li>
+          <li class="social-facebook"><a href="#"><img src="Facebook"></a></li>
+          <li class="social-youtube"><a href="#"><img src="Youtube"></a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        <a href="#">WEBSITE BY<img src="#">html academy</a>
+      </div>
     </footer>
   </body>
 </html>
