Добавил страничку каталог
+ отредактировал индекс:
переписал классы
добавил скрытый заголовок
поправил все заголовки
рисункам задал ширину
у иконок убрал тег img задам потом в CSS фоном

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="header">
-      <div>
+    <header class="main-header">
         <nav class="header-menu">
+          <a class="main-header-logo">
+            <img src="img/index-logo.svg" width="138" height="70" alt="Логотип Sedona">
+          </a>
           <ul class="menu-list">
             <li><a href="#">ИНФОРМАЦИЯ</a></li>
             <li><a href="#">ФОТО И ВИДЕО</a></li>
@@ -15,64 +18,59 @@
             <li><a href="#">ГОСТИНИЦЫ</a></li>
           </ul>
         </nav>
-    </div>-
-    <div class="top-image">
-        <img src="#">
-    </div>
-    <div class="front-image">
-        <img src="#">
-    </div>
     </header>
     <main class="main">
-      <div class="main-text">
-        <h1>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
+      <h1 class="visually-hidden">Городок Седона, чем она лучше Гранд Каньона</h1>
+      <picture class="main-image">
+        <img src="img/main-foto.svg" width="1200" height="773" alt="Фотография Седоны">
+      </picture>
+      <section class="main-text">
+        <h2>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
         <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</p>
-      </div>
+      </section>
       <section class="main-realhouse">
-        <h2>НАСТОЯЩИЙ ГОРОДОК</h2>
+        <h3>НАСТОЯЩИЙ ГОРОДОК</h2>
         <p>-№1-</p>
         <p>СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
       </section>
-      <picture class="main-firstimage">
-        <img src="#">
-      </picture>
+      <div>
+        <picture class="main-firstimage">
+          <img src="img/firstimage.svg" width="800" height="256" alt="Красивый вид в Седоне">
+        </picture>
+      </div>
+      <section class="main-house">
+        <h3>Жилье</h3>
+        <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЕ КАК В КИНО!</p>
+      </section>
       <section class="main-food">
-        <img src="#">
         <h3>ЕДА</h3>
         <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ БУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</p>
       </section>
       <section class="main-souvenir">
-        <img src="#">
         <h3>СУВЕНИРЫ</h3>
         <p>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</p>
       </section>
-      <section class="main-house">
-        <img src="#">
-        <h3>Жилье</h3>
-        <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЕ КАК В КИНО!</p>
-      </section>
-      <picture class="main-secondimage">
-        <img src="#">
-      </picture>
+      <div>
+        <picture class="main-secondimage">
+          <img src="img/secondimage.svg" width="800" height="256" alt="Каньон в Седоне">
+        </picture>
+      </div>
       <section>
-        <h2>ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h2>
+        <h3>ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h2>
         <p>-№2-</p>
         <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ ВЫ ОСМЕЛИТЕСЬ</p>
       </section>
       <section class="main-area">
-        <img src="#">
         <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
         <p>-№3-</p>
         <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
       </section>
       <section class="main-route">
-        <img src="#">
         <h3>КРАСИВАЯ ДОРОГА</h3>
         <p>-№4-</p>
         <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
       </section>
       <section class="main-tourist">
-        <img src="#">
         <h3>МАЛО ТУРИСТОВ</h3>
         <p>-№5-</p>
         <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</p>
@@ -81,9 +79,7 @@
         <h2>ЗАИНТЕРЕСОВАЛИСЬ?</h2>
         <p>УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</P>
       </section>
-      <div>
-        <h3>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</h3>
-      </div>
+      <!-- Здесь будет форма -->
     </main>
     <footer class="footer">
       <div class="footer-tags">
