--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <header class="main-header">
+      <a class="main-header-logo">
+        <img src="img/index-logo.svg" width="138" height="70" alt="Логотип Sedona">
+      </a>
         <nav class="header-menu">
-          <a class="main-header-logo">
-            <img src="img/index-logo.svg" width="138" height="70" alt="Логотип Sedona">
-          </a>
           <ul class="menu-list">
             <li><a href="#">ИНФОРМАЦИЯ</a></li>
             <li><a href="#">ФОТО И ВИДЕО</a></li>
@@ -29,9 +29,9 @@
         <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</p>
       </section>
       <section class="main-realhouse">
-        <h3>НАСТОЯЩИЙ ГОРОДОК</h2>
-        <p>-№1-</p>
-        <p>СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+        <h3 class="realhouse-sity">НАСТОЯЩИЙ ГОРОДОК</h2>
+        <p class="realhouse-#1">-№1-</p>
+        <p class="realhouse-Sedona">СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
       </section>
       <div>
         <picture class="main-firstimage">
@@ -55,10 +55,10 @@
           <img src="img/secondimage.svg" width="800" height="256" alt="Каньон в Седоне">
         </picture>
       </div>
-      <section>
-        <h3>ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h2>
-        <p>-№2-</p>
-        <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ ВЫ ОСМЕЛИТЕСЬ</p>
+      <section class="main-bridge">
+        <h3 class="bridge-devil">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h2>
+        <p class="bridge-#2">-№2-</p>
+        <p class="bridge-go">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ ВЫ ОСМЕЛИТЕСЬ</p>
       </section>
       <section class="main-area">
         <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
