Add picture from layouts
And changed the path to the images

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <header class="main-header">
         <nav class="header-menu">
           <a class="main-header-logo">
-            <img src="img/index-logo.svg" width="138" height="70" alt="Логотип Sedona">
+            <img src="img/index-logo.png" width="138" height="70" alt="Логотип Sedona">
           </a>
           <ul class="menu-list">
             <li><a href="#">ИНФОРМАЦИЯ</a></li>
@@ -37,6 +37,7 @@
         <div class="main-housing">
           <section class="housing-item">
             <h2 class="Amara-star">AMARA RESORT &amp; SPA</h2>
+            <img src="img/amara.jpg" width="135" height="90" alt="Фотография гостиницы AMARA RESORT &amp; SPA">
             <p>
               <span class="housing-name">Гостиница</span>
               <span class="housing-price">ОТ 4000 Р.</span>
@@ -49,6 +50,7 @@
           </section>
           <section class="housing-item">
             <h2 class="Desert-star">DESERT QUAIL INN</h2>
+            <img src="img/desert.jpg" width="135" height="90" alt="Фотография мотеля DESERT QUAIL INN">
             <p>
               <span class="housing-name">Мотель</span>
               <span class="housing-price">ОТ 3000 Р.</span>
@@ -61,6 +63,7 @@
           </section>
           <section class="housing-item">
             <h2 class="Villas-star">VILLAS AT POCO DIABLO</h2>
+            <img src="img/desert.jpg" width="135" height="90" alt="Фотография аппартаментов VILLAS AT POCO DIABLO">
             <p>
               <span class="housing-name">Апартаменты</span>
               <span class="housing-price">ОТ 2000 Р.</span>
@@ -79,13 +82,13 @@
       </div>
       <div class="footer-social">
         <ul class="social-list">
-          <li class="social-twitter"><a href="#"><img src="Twitter"></a></li>
-          <li class="social-facebook"><a href="#"><img src="Facebook"></a></li>
-          <li class="social-youtube"><a href="#"><img src="Youtube"></a></li>
+          <li class="social-twitter"><a href="#"><img src="img/twitter.png">Twitter</a></li>
+          <li class="social-facebook"><a href="#"><img src="img/facebook.png">Facebook</a></li>
+          <li class="social-youtube"><a href="#"><img src="img/youtube.png">Youtube</a></li>
         </ul>
       </div>
       <div class="footer-copyright">
-        <a href="#">WEBSITE BY<img src="#">html academy</a>
+        <a href="#">WEBSITE BY<img src="img/logo-name.png" width="115" height="41" alt="Логотип HTMLacademy">html academy</a>
       </div>
     </footer>
   </body>
