--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="main-header">
       <a class="main-header-logo">
-        <img src="img/index-logo.svg" width="138" height="70" alt="Логотип Sedona">
+        <img src="img/index-logo.png" width="138" height="70" alt="Логотип Sedona">
       </a>
         <nav class="header-menu">
           <ul class="menu-list">
@@ -22,7 +22,7 @@
     <main class="main">
       <h1 class="visually-hidden">Городок Седона, чем она лучше Гранд Каньона</h1>
       <picture class="main-image">
-        <img src="img/main-foto.svg" width="1200" height="773" alt="Фотография Седоны">
+        <img src="img/main-foto.jpg" width="1200" height="773" alt="Фотография Седоны">
       </picture>
       <section class="main-text">
         <h2>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
@@ -35,7 +35,7 @@
       </section>
       <div>
         <picture class="main-firstimage">
-          <img src="img/firstimage.svg" width="800" height="256" alt="Красивый вид в Седоне">
+          <img src="img/firstimage.jpg" width="800" height="256" alt="Красивый вид в Седоне">
         </picture>
       </div>
       <section class="main-house">
@@ -52,7 +52,7 @@
       </section>
       <div>
         <picture class="main-secondimage">
-          <img src="img/secondimage.svg" width="800" height="256" alt="Каньон в Седоне">
+          <img src="img/secondimage.jpg" width="800" height="256" alt="Каньон в Седоне">
         </picture>
       </div>
       <section class="main-bridge">
@@ -87,13 +87,13 @@
       </div>
       <div class="footer-social">
         <ul class="social-list">
-          <li class="social-twitter"><a href="#"><img src="Twitter"></a></li>
-          <li class="social-facebook"><a href="#"><img src="Facebook"></a></li>
-          <li class="social-youtube"><a href="#"><img src="Youtube"></a></li>
+          <li class="social-twitter"><a href="#"><img src="img/twitter.png">Twitter</a></li>
+          <li class="social-facebook"><a href="#"><img src="img/facebook.png">Facebook</a></li>
+          <li class="social-youtube"><a href="#"><img src="img/youtube.png">Youtube</a></li>
         </ul>
       </div>
       <div class="footer-copyright">
-        <a href="#">WEBSITE BY<img src="#">html academy</a>
+        <a href="#">WEBSITE BY<img src="img/logo-name.png" width="115" height="41" alt="Логотип HTMLacademy">html academy</a>
       </div>
     </footer>
   </body>
