Загрузил свг подготовленные для проекта
переписал пути для свг

--- a/catalog.html
+++ b/catalog.html
@@ -82,13 +82,13 @@
       </div>
       <div class="footer-social">
         <ul class="social-list">
-          <li class="social-twitter"><a href="#"><img src="img/twitter.png">Twitter</a></li>
-          <li class="social-facebook"><a href="#"><img src="img/facebook.png">Facebook</a></li>
-          <li class="social-youtube"><a href="#"><img src="img/youtube.png">Youtube</a></li>
+          <li class="social-twitter"><a href="#"><img src="img/twitter.svg">Twitter</a></li>
+          <li class="social-facebook"><a href="#"><img src="img/fb-icon.svg">Facebook</a></li>
+          <li class="social-youtube"><a href="#"><img src="img/youtube.svg">Youtube</a></li>
         </ul>
       </div>
       <div class="footer-copyright">
-        <a href="#">WEBSITE BY<img src="img/logo-name.png" width="115" height="41" alt="Логотип HTMLacademy">html academy</a>
+        <a href="#">WEBSITE BY<img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTMLacademy">html academy</a>
       </div>
     </footer>
   </body>
