--- a/catalog.html
+++ b/catalog.html
@@ -28,10 +28,10 @@
         </div>
         <div class="main-form-sorter">
           <ul class="sorter-list">
-            <li>Сортировка</li>
-            <li>По цене</li>
-            <li>По типу</li>
-            <li>По рейтингу</li>
+            <li class="list-item-sort">Сортировка</li>
+            <li class="list-item-price">По цене</li>
+            <li class="list-item-type">По типу</li>
+            <li class="list-item-rating">По рейтингу</li>
           </ul>
         </div>
         <div class="main-housing">
@@ -82,9 +82,9 @@
       </div>
       <div class="footer-social">
         <ul class="social-list">
-          <li class="social-twitter"><a href="#"><img src="img/twitter.svg">Twitter</a></li>
-          <li class="social-facebook"><a href="#"><img src="img/fb-icon.svg">Facebook</a></li>
-          <li class="social-youtube"><a href="#"><img src="img/youtube.svg">Youtube</a></li>
+          <li class="social-twitter"><a href="#"><img src="img/twitter.svg" width="46" height="48" alt="Ссылка на Twitter">Twitter</a></li>
+          <li class="social-facebook"><a href="#"><img src="img/fb-icon.svg" width="46" height="48" alt="Ссылка на Facebook">Facebook</a></li>
+          <li class="social-youtube"><a href="#"><img src="img/youtube.svg" width="46" height="48" alt="Ссылка на Youtube">Youtube</a></li>
         </ul>
       </div>
       <div class="footer-copyright">
