--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
       </div>
       <div class="footer-social">
         <ul class="social-list">
-          <li class="social-twitter"><a href="#"><img src="img/twitter.svg">Twitter</a></li>
-          <li class="social-facebook"><a href="#"><img src="img/fb-icon.svg">Facebook</a></li>
-          <li class="social-youtube"><a href="#"><img src="img/youtube.svg">Youtube</a></li>
+          <li class="social-twitter"><a href="#"><img src="img/twitter.svg"  width="46" height="48" alt="Ссылка на Twitter">Twitter</a></li>
+          <li class="social-facebook"><a href="#"><img src="img/fb-icon.svg" width="46" height="48" alt="Ссылка на Facebook">Facebook</a></li>
+          <li class="social-youtube"><a href="#"><img src="img/youtube.svg" width="46" height="48" alt="Ссылка на Youtube">Youtube</a></li>
         </ul>
       </div>
       <div class="footer-copyright">
