--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <img src="img/main-foto.jpg" width="1200" height="773" alt="Фотография Седоны">
       </picture>
       <section class="main-text">
-        <h2>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h1>
+        <h2>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
         <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</p>
       </section>
       <section class="main-realhouse">
-        <h3 class="realhouse-sity">НАСТОЯЩИЙ ГОРОДОК</h2>
+        <h3 class="realhouse-sity">НАСТОЯЩИЙ ГОРОДОК</h3>
         <p class="realhouse-#1">-№1-</p>
         <p class="realhouse-Sedona">СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
       </section>
@@ -56,7 +56,7 @@
         </picture>
       </div>
       <section class="main-bridge">
-        <h3 class="bridge-devil">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h2>
+        <h3 class="bridge-devil">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
         <p class="bridge-#2">-№2-</p>
         <p class="bridge-go">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ ВЫ ОСМЕЛИТЕСЬ</p>
       </section>
@@ -100,7 +100,7 @@
               <label for="adults">Взрослые:</label>
               <span class="adults-number">
                 <a class="adult-reduce" href="#">Less</a>
-                <input class="people-number" id="adults" type="text" pattern="[0-9]*" value="2" min="0">
+                <input class="people-number" id="adults" type="text" pattern="[0-9]*" value="2">
                 <a class="adult-add" href="#">More</a>
               </span>
             </p>
@@ -108,7 +108,7 @@
               <label for="children">Дети:</label>
               <span class="children-number">
                 <a class="children-reduce" href="#">Less</a>
-                <input class="people-number" id="children" type="text" pattern="[0-9]*" value="0" min="0">
+                <input class="people-number" id="children" type="text" pattern="[0-9]*" value="0">
                 <a class="children-add" href="#">More</a>
               </span>
             </p>
