Add picture map
... and tags in HTML

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
             <input type="submit" value="Найти">
           </div>
         </form>
+        <div class="map">
+          <picture class="map-image">
+            <img src="img/map.jpg" width="1200" height="756" alt="Карта окрестностей Седоны">
+          </picture>
+        </div>
       </section>
     </main>
     <footer class="footer">
