--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
   <body>
     <div class="wrapper">
       <header class="main-header">
-        <a class="main-header-logo">
-          <img src="img/index-logo.png" width="138" height="70" alt="Логотип Sedona">
-        </a>
           <nav class="header-menu">
             <ul class="menu-list">
               <li><a href="#">ИНФОРМАЦИЯ</a></li>
@@ -20,27 +17,34 @@
               <li><a href="#">КАРТА ШТАТА</a></li>
               <li><a href="#">ГОСТИНИЦЫ</a></li>
             </ul>
+            <div class="header-logo">
+              <a>Логотип Седоны</a>
+            </div>
           </nav>
       </header>
       <main class="main">
-        <h1 class="visually-hidden">Городок Седона, чем она лучше Гранд Каньона</h1>
-        <picture class="main-image">
-          <img src="img/main-foto.jpg" width="1200" height="773" alt="Фотография Седоны">
-        </picture>
+        <section class="main-photo">
+          <h1 class="visually-hidden">Городок Седона, чем она лучше Гранд Каньона</h1>
+          <picture class="main-image">
+            <img src="img/sedona-description.png" alt="" width="458" height="352">
+          </picture>
+        </section>
         <section class="main-text">
-          <h2>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
+          <h2 class="main-text-sedona">СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
           <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</p>
         </section>
         <section class="main-realhouse">
-          <h3 class="realhouse-sity">НАСТОЯЩИЙ ГОРОДОК</h3>
-          <p class="realhouse-#1">-№1-</p>
-          <p class="realhouse-Sedona">СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
-        </section>
-        <div>
-          <picture class="main-firstimage">
-            <img src="img/firstimage.jpg" width="800" height="256" alt="Красивый вид в Седоне">
+          <div class="realhouse-text">
+            <h2 class="realhouse-sity">НАСТОЯЩИЙ ГОРОДОК</h2>
+            <p class="realhouse-n1">-№1-</p>
+            <p class="realhouse-Sedona">СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+          </div>
+        <div class="main-firstimage">
+          <picture>
+            <img src="img/firstimage.jpg" width="800" height="400" alt="Красивый вид в Седоне">
           </picture>
         </div>
+        </section>
         <section class="main-house">
           <h3>Жилье</h3>
           <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЕ КАК В КИНО!</p>
